# novabank

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  Makefile  README.md
.github/workflows/: ci-backend.yml  ci-frontend.yml  ci.yml
backend/: .dockerignore  .env.example  Dockerfile  config.py  entrypoint.sh  main.py  pyproject.toml  requirements.txt
backend/data/: company.json  products.json
backend/dependencies/: auth.py  limiter.py  supabase.py
backend/models/: chat.py
backend/routers/: ai.py  health.py  user.py
backend/schemas/: chat.py
backend/services/: ai.py  supabase.py
backend/tests/: conftest.py  test_ai_service.py  test_auth.py  test_body_limit.py  test_chat.py  test_chat_models.py  test_config.py  test_health.py  test_history.py  test_limiter.py  test_logging.py  test_rate_limit.py  test_user.py
frontend/: .env.example  .prettierrc  eslint.config.js  index.html  package-lock.json  package.json  vercel.json  vite.config.ts
frontend/public/banners/: Business-banner.avif  Cards-banner.avif  Careers-banner.avif  Home-banner.avif  Loans-banner.avif  Personal-banner.avif  Security-banner.avif
frontend/src/: App.tsx  animations.ts  constants.ts  index.css
frontend/src/context/: AuthContext.tsx  AuthProvider.tsx  authContext.ts  useAuth.ts
frontend/src/hooks/: usePageTitle.ts
frontend/src/lib/: api.ts
frontend/src/test/: AIAssistant.test.tsx  AuthProvider.test.tsx  Dashboard.test.tsx  ErrorBoundary.test.tsx  Login.test.tsx  ProtectedRoute.test.tsx  Signup.test.tsx  TransactionTable.test.tsx  api.test.ts  buildAmortization.test.ts  (+1 more)
(+72 files in other folders)
