[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "anthropic>=0.49.0",
    "uvicorn[standard]>=0.47.0",
    "python-dotenv>=1.1.0",
    "PyJWT>=2.10.0",
    "supabase>=2.30.0",
    "slowapi>=0.1.9",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "black>=26.3.1",
    "isort>=8.0.1",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
]
