[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "anthropic>=0.49.0",
    "uvicorn[standard]>=0.47.0",
    "pydantic-settings>=2.9.0",
    "PyJWT>=2.10.0",
    "supabase>=2.30.0",
    "slowapi>=0.1.9",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = [
    "B008", # FastAPI uses Security()/Depends() in default args by design
    "E501", # line length enforced by formatter, not linter
]

[tool.ruff.format]
quote-style = "double"

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "pytest-cov>=6.0",
]
